# goit-ds-hw-01

hw06AnastasiyaBohatchuk.zip/: dockerfile  hw6-1.py  pyproject.toml
