[tool.poetry]
name = "завдання 1"
version = "0.1.0"
description = ""
authors = ["Анастасия <17121t2118@gmail.com>"]
license = "Візьміть вашу останню домашню роботу с курсу Core проект \"Персональний помічник\". Скористайтеся будь-яким зручним інструментом pipenv або poetry, на ваш вибір, для створення віртуального середовища для вашої програми. Зафіксуйте версію Python у цьому середовищі (вкажіть чітко: який Python слід використовувати) та налаштуйте ваше робоче середовище (IDE) для роботи зі створеним середовищем. Якщо використовували сторонні проекти, вони також повинні тепер мати конкретну версію."
readme = "README.md"

[tool.poetry.dependencies]
python = 3.12


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
